--- a/R_code/Differential expression/04_TF-expression.Rmd
+++ b/R_code/Differential expression/04_TF-expression.Rmd
@@ -59,13 +59,13 @@ plot_TF_expression <- function(TFs){
     theme(text = element_text(size = 13),
           strip.text.x = element_text(size = 16)) +
     xlab("Age") + 
-    ylab("FPKM") +
-    geom_smooth(color = "red")
+    ylab("Normalized expression") +
+    geom_smooth(color = "brown")
 }
 
 plot_TF_mean_expression <- function(TFs){
   TF_expr <- filter(counts, gene %in% TFs) %>%
-    # if two ensembl ids correspond to the same TF take the mean count
+    # if two ensembl ids correspond to the same gene take the mean count
     group_by(gene, names, Age, age_group) %>%
     summarize(counts = mean(counts)) 
   
@@ -185,3 +185,31 @@ plot_TF_mean_expression(genes) +
   facet_wrap(~gene, scales = "free_y", nrow = 1)
 ```
 
+
+# Significant bridge TFs
+## Steiner network S1
+```{r expr_S1_TFs, fig.height = 2.5}
+genes <-  c("CEBPB", "FLI1", "MAZ", "SUMO2", "AHR", "EP300")
+plot_TF_mean_expression(genes) + 
+  facet_wrap(~gene, scales = "free_y", nrow = 1)
+```
+
+## Steiner network S3
+```{r expr_S3_TFs, fig.height = 6}
+genes <-  c('E2F1', 'KDM4C', 'POLR2A', 'HOXA6', 'HDAC1', 'TAF3', 'GTF2B',
+                'RBBP5', 'NOTCH1', 'GABPA', 'MNT', 'BRD2', 'KAT5', 'BMI1', 'ZNF384')
+plot_TF_mean_expression(genes) + 
+  facet_wrap(~gene, scales = "free_y", ncol = 6)
+```
+
+## Selected genes
+```{r lasso_expr1, fig.height = 4}
+genes <-  c('RILP', 'CD300C', 'MYCL', 'MROH7', 'ZNF534')
+plot_TF_expression(genes) + 
+  facet_wrap(~gene, scales = "free_y", ncol = 6)
+```
+```{r lasso_expr2, fig.height = 4}
+genes <-  c('ILKAP', 'NUDT19', 'RILP', 'NEFH', 'ITPRIPL2')
+plot_TF_expression(genes) + 
+  facet_wrap(~gene, scales = "free_y", ncol = 6)
+```
